fixed spacing for header

--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,7 @@
   section nav {
     display:flex;
     align-items: center;
-    justify-content: space-around; 
+    justify-content: space-evenly;
     box-shadow: 0 0 8px rgba(0,0,0,0.6);
     background: #282A37;
     position: fixed; 
@@ -31,12 +31,12 @@
   }
  
   section nav .logo {
-    font-size: 12px; /* Adjust the font size as needed */
-    color: #ffffff; /* White color */
+    font-size: 12px; 
+    color: #ffffff; 
     margin: 5px ;
     cursor: pointer;
     position: relative;
-    right: 13%; /* Adjust the right position as needed */
+    right: 16%; 
     text-align: center; /* Center the text */
   }
   /* adjusts the text when reducing browser size */
@@ -47,12 +47,13 @@
   }
   
   section nav ul{
-    list-style:none
+    list-style:none;
+    display: flex;
   }
   
   section nav ul li{
     display: inline-block;
-    margin: 5px 15px;
+    margin: 0px 15px;
     
   }
   
@@ -65,6 +66,7 @@
   section nav ul li a:hover{
     color: #420101
   }
+
   
   section nav .icons i{
     margin: 0 4px;
@@ -255,9 +257,10 @@
     font-family: inherit;
     font-size: inherit;
     cursor: pointer;
-    padding: 0;
-    margin-right: 20px;
-    font-size: 16px
+    padding: 14px 0px 12px 0;
+    margin-right: 15px;
+    font-size: 12px;
+    margin-left: auto;
   }
   
   /* Style the "Services" button */
@@ -529,11 +532,12 @@
   .services-btn {
     /* background-color: #202c34; */
     color: white;
-    padding: 12px;
-    font-size: 16px;
+    padding: 0px 0px 12px 0;
+    font-size: 12px;
     border: none;
-    margin-right: 20px;
+    margin-right: 12px;
     text-decoration: none;
+    z-index: 100;
   }
   
   
@@ -544,7 +548,7 @@
     background-color: #393D50;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 100;
     top: calc(100% + 10px);
     border: 1px solid #99a9b5;
   }
